Version 0.43.0 (In Progress)

  * additional option added to showalias to expand alias membership
  * enhanced ability to create directory with no contents (e.g. a file
    system mount point). To have LosF create an empty directory, add
    the desired directory path into the [Permissions] config section
    and include a trailing slash "/" on the directory path. 
  * require user to provide a valid configuration path (set via
    LOSF_CONFIG_DIR environment variable or config/config_dir file)
  * added -v options to losf and update command-line utilities to provide versioning info
  * addition of "losf sync" command which synchronizes host provisioning config with Cobbler
  * addition of "losf reinsert [host]" (a convenience command to perform del/add combinations)
  * example top-level LosF config file provided in config/config.machines.example
  * example cluster-specific configuration file provided in config/config.Bar
  * transitioned SCM from subversion to git 

Version 0.42.0  (12 December 2013)

  * add option to disable update on specific host (via /root/losf-noupdate file)
  * add input file option to provide system-specific configuration
    option (config_dir); the global value can also be customized on a
    per-host basis using regular expressions
  * add auto-configuration of Custom package removal when upgrading a multi-install package
  * changed order of operations for update utility - all packages
    (OS and Custom) flagged for removal are now uninstalled prior to any new updates

Version 0.41.0  (19 March 2013)

  * added silent mode option for update which shows single line summary if host is up to date
  * added option to use alternate config file location (set via LOSF_CONFIG_DIR variable)
  * added local log file (/tmp/losf/last_update) to track last local update
  * performance optimization - locally installed RPMS queried once and cached
  * OS and custom package config file format update: "losf config-upgrade" can be used