@@ -1,6 +1,7 @@
 Version 0.43.0 (In Progress)
 
-  * additional option added to showalias to expand alias membership
+  * addition of "losf addalias" option to register custom package alias for installation
+  * additional option added to showalias allowing expansion of alias membership
   * enhanced ability to create directory with no contents (e.g. a file
     system mount point). To have LosF create an empty directory, add
     the desired directory path into the [Permissions] config section
